# mh-wilds-weapon-tracker

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.json
src/: main.py
src/config/: weapons_config.json
src/core/: tracker.py
src/ui/: interface.py
src/utils/: config_path.py
